app7DataMasking/microservice3/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app7-microservice1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app7-microservice3
  template:
    metadata:
      labels:
        app: app7-microservice3
    spec:
      containers:
      - name: app7-microservice3
        image: b0rkemborina/zta-cybersec-suite:app7microservice3
        ports:
        - containerPort: 8062
