app7DataMasking/microservice3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app7-microservice3
spec:
  selector:
    app: app7-microservice3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8062
  type: ClusterIP
